pyinterp/pyinterp/pyinterp/tests/must_pass/scope/errors/global_name_error1.py
def f():
    global x
    return x

f()